# basecamp-sdk

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SPEC.md  behavior-model.json  go.work.sum  openapi.json  package.json
.github/: actionlint.yaml  release.yml
.github/prompts/: spec-impact.prompt.yml  summarize-changelog.prompt.yml
.github/scripts/: splice-prompt.py
.github/workflows/: ai-labeler.yml  codeql.yml  dependabot-auto-merge.yml  labeler.yml  release-github.yml  release-go.yml  (+9 more)
go/: README.md  go.mod  go.sum
python/: README.md  pyproject.toml
python/scripts/: generate_metadata.py  generate_services.py  generate_types.py
python/src/basecamp/: __init__.py  _async_http.py  _http.py  _pagination.py  _security.py  _version.py  async_auth.py  async_client.py  auth.py  client.py  config.py  download.py  errors.py  hooks.py
python/src/basecamp/oauth/: __init__.py  authorize.py  config.py  discovery.py  errors.py  exchange.py  pkce.py  token.py
python/src/basecamp/services/: __init__.py  authorization.py
python/src/basecamp/webhooks/: __init__.py  errors.py  events.py  receiver.py  verify.py
python/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_download.py  test_errors.py  test_hooks.py  test_http.py  test_pagination.py  test_security.py
python/tests/oauth/: test_authorize.py  test_discovery.py  test_exchange.py  test_pkce.py
python/tests/services/: test_checkins.py
python/tests/webhooks/: test_events.py  test_receiver.py  test_verify.py
scripts/: bump-version.sh  check-python-service-drift.sh  check-service-drift.sh  enhance-openapi-go-types.sh  sync-api-version.sh  sync-spec-version.sh
spec/: basecamp-traits.smithy  basecamp.smithy
typescript/: README.md  package-lock.json  package.json
(+156 files in other folders)
