[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basecamp-sdk"
version = "0.7.2"
description = "Official Python SDK for the Basecamp API"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "37signals" }]
keywords = ["basecamp", "api", "sdk", "37signals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27,<1"]

[project.urls]
Homepage = "https://github.com/basecamp/basecamp-sdk"
Repository = "https://github.com/basecamp/basecamp-sdk"
Documentation = "https://github.com/basecamp/basecamp-sdk/tree/main/python"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "respx>=0.22",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basecamp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/basecamp/generated/**" = ["E501", "I001", "F401"]
"src/basecamp/generated/types.py" = ["E501", "UP", "I001", "F401"]

[tool.coverage.run]
source = ["basecamp"]
omit = ["*/generated/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["generated/"]

[[tool.mypy.overrides]]
module = "basecamp.generated.*"
ignore_errors = true
